fix(settings): some functions were incorrectly namespacing settings

--- a/src/scss/asimov/functions/_colors.scss
+++ b/src/scss/asimov/functions/_colors.scss
@@ -47,7 +47,7 @@
 // @return [Map]
 @function set-colors($map, $default:false) {
     @if $default {
-        @if set-default((asimov: (colors: $map))) == null {
+        @if set-default((colors: $map)) == null {
             @warn("Something went wrong!");
         }
     }
